// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToolOutput > matches snapshot when null (no output or error) 1`] = `null`;

exports[`ToolOutput > matches snapshot with both output and error 1`] = `
<div
  class="space-y-2 p-4"
>
  <h4
    class="font-medium text-muted-foreground text-xs uppercase tracking-wide"
  >
    Error
  </h4>
  <div
    class="overflow-x-auto rounded-md text-xs [&_table]:w-full bg-destructive/10 text-destructive"
  >
    <div>
      Error occurred
    </div>
    <div>
      <div>
        Output
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolOutput > matches snapshot with complex output 1`] = `
<div
  class="space-y-2 p-4"
>
  <h4
    class="font-medium text-muted-foreground text-xs uppercase tracking-wide"
  >
    Result
  </h4>
  <div
    class="overflow-x-auto rounded-md text-xs [&_table]:w-full bg-muted/50 text-foreground"
  >
    <div>
      <div>
        <table>
          <tbody>
            <tr>
              <td>
                Data
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolOutput > matches snapshot with custom className 1`] = `
<div
  class="space-y-2 p-4 custom-class"
>
  <h4
    class="font-medium text-muted-foreground text-xs uppercase tracking-wide"
  >
    Result
  </h4>
  <div
    class="overflow-x-auto rounded-md text-xs [&_table]:w-full bg-muted/50 text-foreground"
  >
    <div>
      <div>
        Output
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolOutput > matches snapshot with error only 1`] = `
<div
  class="space-y-2 p-4"
>
  <h4
    class="font-medium text-muted-foreground text-xs uppercase tracking-wide"
  >
    Error
  </h4>
  <div
    class="overflow-x-auto rounded-md text-xs [&_table]:w-full bg-destructive/10 text-destructive"
  >
    <div>
      Error message
    </div>
  </div>
</div>
`;

exports[`ToolOutput > matches snapshot with output only 1`] = `
<div
  class="space-y-2 p-4"
>
  <h4
    class="font-medium text-muted-foreground text-xs uppercase tracking-wide"
  >
    Result
  </h4>
  <div
    class="overflow-x-auto rounded-md text-xs [&_table]:w-full bg-muted/50 text-foreground"
  >
    <div>
      <div>
        Test output
      </div>
    </div>
  </div>
</div>
`;
